--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-vector-icons": "^8.0.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.10.1",
