--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-animated-icons": "^1.0.5",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-debugger": "^1.1.0",
     "react-native-gesture-handler": "^1.10.0",
     "react-native-reanimated": "^1.13.2",
@@ -28,6 +30,7 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.10.1",
     "react-redux": "^7.2.2",
+    "react-useanimations": "^2.0.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
