--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google-cloud/firestore": "^4.9.3",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.8.0",
+    "@react-native-firebase/auth": "^10.8.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
@@ -23,6 +25,7 @@
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-debugger": "^1.1.0",
     "react-native-gesture-handler": "^1.10.0",
+    "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
